packages/fuel-indexer-tests/trybuild/fail_if_indexer_module_is_empty.stderr
error: No module body, must specify at least one handler function.
 --> $WORKSPACE/fuel-indexer-tests/trybuild/fail_if_indexer_module_is_empty.rs
  |
  | / #[indexer(
  | |     manifest = "fuel-indexer-tests/assets/macros/simple_wasm.yaml"
  | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> $WORKSPACE/fuel-indexer-tests/trybuild/fail_if_indexer_module_is_empty.rs
  |
  | mod indexer {}
  |               ^ consider adding a `main` function to `$WORKSPACE/fuel-indexer-tests/trybuild/fail_if_indexer_module_is_empty.rs`
